add support for dumping field dumps as text