@@ -8,9 +8,12 @@ import org.xml.sax.SAXException;
 
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
-import java.io.BufferedInputStream;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.*;
 
 public final class QuiltflowerVersions {
@@ -41,30 +44,42 @@ public final class QuiltflowerVersions {
     public static List<String> versions() {
         if (VERSIONS == null) {
             try {
-                var conn = new URL(MAVEN_METADATA_URL).openConnection();
-                try (var is = new BufferedInputStream(conn.getInputStream())) {
-                    var root = DocumentBuilderFactory.newDefaultInstance()
-                        .newDocumentBuilder()
-                        .parse(is)
-                        .getDocumentElement();
+                var res = HttpClient.newHttpClient()
+                    .send(HttpRequest.newBuilder()
+                            .uri(new URI(MAVEN_METADATA_URL))
+                            .GET()
+                            .build(),
+                        unused ->
+                            HttpResponse.BodySubscribers.mapping(
+                                HttpResponse.BodySubscribers.ofInputStream(),
+                                is -> {
+                                    try (is) {
+                                        return DocumentBuilderFactory.newDefaultInstance()
+                                            .newDocumentBuilder()
+                                            .parse(is);
+                                    } catch (IOException | ParserConfigurationException | SAXException e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                }));
+                var root = res.body()
+                    .getDocumentElement();
 
-                    var versioning = child(root, "versioning");
-                    var versionsEl = child(versioning, "versions");
-                    var children = versionsEl.getChildNodes();
-                    var versions = new ArrayList<String>();
+                var versioning = child(root, "versioning");
+                var versionsEl = child(versioning, "versions");
+                var children = versionsEl.getChildNodes();
+                var versions = new ArrayList<String>();
 
-                    for (int i = 0; i < children.getLength(); i++) {
-                        var child = children.item(i);
+                for (int i = 0; i < children.getLength(); i++) {
+                    var child = children.item(i);
 
-                        versions.add(child.getTextContent());
-                    }
-
-                    VERSIONS = Collections.unmodifiableList(versions);
-
-                    var latestEl = child(versioning, "latest");
-                    LATEST_VERSION = latestEl.getTextContent();
+                    versions.add(child.getTextContent());
                 }
-            } catch (IOException | ParserConfigurationException | SAXException e) {
+
+                VERSIONS = Collections.unmodifiableList(versions);
+
+                var latestEl = child(versioning, "latest");
+                LATEST_VERSION = latestEl.getTextContent();
+            } catch (IOException | URISyntaxException | InterruptedException e) {
                 throw new RuntimeException(e);
             }
         }
